# Binary Search
add_executable(binary_search binary_search.cc)  # 704
add_executable(search_insert_position search_insert_position.cc)  # 34
add_executable(find_first_and_last_position_of_element_in_sorted_array 
  find_first_and_last_position_of_element_in_sorted_array.cc)  # 35
add_executable(sqrtx sqrtx.cc)  # 69
add_executable(valid_perfect_square valid_perfect_square.cc)  # 367
add_executable(search_in_rotated_sorted_array 
  search_in_rotated_sorted_array.cc) # 33
# 81 
# 154 
# 540  
# 4

add_executable(search_a_2d_matrix_ii search_a_2d_matrix_ii.cc)  # 240

# Two Pointers
# 27