# Binary Search
add_executable(binary_search binary_search.cc)  # 704.
add_executable(search_insert_position search_insert_position.cc)  # 34.
add_executable(find_first_and_last_position_of_element_in_sorted_array 
  find_first_and_last_position_of_element_in_sorted_array.cc)  # 35.
add_executable(sqrtx sqrtx.cc)  # 69.
add_executable(valid_perfect_square valid_perfect_square.cc)  # 367
add_executable(search_in_rotated_sorted_array 
  search_in_rotated_sorted_array.cc) # 33
# 81 
# 154 
# 540  
# 4

add_executable(search_a_2d_matrix_ii search_a_2d_matrix_ii.cc)  # 240

# Two Pointers
add_executable(remove_element remove_element.cc)  # 27
add_executable(remove_duplicates_from_sorted_array 
  remove_duplicates_from_sorted_array.cc)  # 26
add_executable(move_zeroes move_zeroes.cc)  # 283
add_executable(backspace_string_compare backspace_string_compare.cc)  # 844
add_executable(squares_of_a_sorted_array squares_of_a_sorted_array.cc)  # 977
# 344
# Offer 05
# 151
# 206
# 19
# 142
# 15
# 18

# Sliding Window
add_executable(minimum_size_subarray_sum minimum_size_subarray_sum.cc)  # 209
# 904
# 76

# 59
