# Binary Search
add_executable(binary_search binary_search.cc)  # 704.
add_executable(search_insert_position search_insert_position.cc)  # 34.
add_executable(find_first_and_last_position_of_element_in_sorted_array 
  find_first_and_last_position_of_element_in_sorted_array.cc)  # 35.
add_executable(sqrtx sqrtx.cc)  # 69.
add_executable(valid_perfect_square valid_perfect_square.cc)  # 367.
add_executable(search_in_rotated_sorted_array 
  search_in_rotated_sorted_array.cc) # 33
add_executable(search_a_2d_matrix_ii search_a_2d_matrix_ii.cc)  # 240
add_executable(search_in_rotated_sorted_array_ii 
  search_in_rotated_sorted_array_ii.cc)  # 81
add_executable(find_minimum_in_rotated_sorted_array 
  find_minimum_in_rotated_sorted_array.cc)  # 153
add_executable(find_minimum_in_rotated_sorted_array_ii 
  find_minimum_in_rotated_sorted_array_ii.cc)  # 154
add_executable(single_element_in_a_sorted_array 
  single_element_in_a_sorted_array.cc)  # 540
add_executable(median_of_two_sorted_arrays median_of_two_sorted_arrays.cc)  # 4

# Two Pointers
add_executable(remove_element remove_element.cc)  # 27.
add_executable(remove_duplicates_from_sorted_array 
  remove_duplicates_from_sorted_array.cc)  # 26.
add_executable(move_zeroes move_zeroes.cc)  # 283
add_executable(backspace_string_compare backspace_string_compare.cc)  # 844
add_executable(squares_of_a_sorted_array squares_of_a_sorted_array.cc)  # 977
# 344
# Offer 05
# 151
# 206
# 19
# 142
# 15
# 18
# 167
# 88
# 142
# 76
# 633
# 680
# 624
# 340

# Sliding Window
# add_executable(minimum_size_subarray_sum minimum_size_subarray_sum.cc)  # 209
# 904
# 76

# 59
